--- a/authmodule/pom.xml
+++ b/authmodule/pom.xml
@@ -20,6 +20,7 @@
 
   <properties>
     <junit.version>4.11</junit.version>
+    <javax.persistence.version>2.2</javax.persistence.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
@@ -33,10 +34,24 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>${javax.persistence.version}</version>
+	</dependency>
+    <dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+  	  <scope>runtime</scope>
+	</dependency>
+    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
    	 <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>org.springframework.boot</groupId>
+  	  <artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
     <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -53,6 +68,7 @@
 	 <groupId>org.springframework.boot</groupId>
 	 <artifactId>spring-boot-starter-oauth2-client</artifactId>
 	</dependency>
+
   </dependencies>
 
   <build>
