--- a/authmodule/src/main/resources/application.properties
+++ b/authmodule/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 #For details on how to generate Google OAuth Credentials, please refer the following link: https://developers.google.com/identity/protocols/oauth2
 spring.security.oauth2.client.registration.google.client-id=508034496860-rn67s7ri677fitsreca95v2c2cr5sqtb.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=abWtaux65FJUHtpZwi24n0U6
+spring.datasource.url=jdbc:mysql://localhost:3306/authmodule
+spring.datasource.username=root
+spring.datasource.password=amalik
