Login Routing Added

--- a/authmodule/src/main/resources/application.properties
+++ b/authmodule/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Please add your Google OAuth2 Client ID and Client Secret below:
 #For details on how to generate Google OAuth Credentials, please refer the following link: https://developers.google.com/identity/protocols/oauth2
-spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-id=508034496860-tl1thah3n4cphaa53ht87m3m0kuqa363.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=ierVv6WlrTCpcw7Sdk1Gafpa
 spring.datasource.url=jdbc:mysql://localhost:3306/authmodule
 spring.datasource.username=root
 spring.datasource.password=amalik
