--- a/authmodule/src/main/resources/application.properties
+++ b/authmodule/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.security.oauth2.client.registration.google.client-id=508034496860-tl1thah
 spring.security.oauth2.client.registration.google.client-secret=
 
 #Configure the following properties as per your Database Specifications
-spring.datasource.url=jdbc:mysql://localhost:3306/authmodule
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
