--- a/authmodule/src/main/resources/application.properties
+++ b/authmodule/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.security.oauth2.client.registration.google.client-secret=ierVv6WlrTCpcw7S
 #Configure the following properties as per your Database Specifications
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=amalik
+spring.datasource.password=
